src/assets/css/style.css
/* ... */
.port_footer_setions .footer_heading:after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: 50px;
    height: 2px;
    background: rgb(255, 196, 85);
}

.copy_right_wrapper p {
    color: #fff;
}

.contact_info p a {
    color: #777777;
}

.port_footer_setions .copy_right_wrapper {
    background: #ffc454;
    padding: 17px 0 12px 0;
    margin-top: 72px;
}

.port_footer_setions .copy_right_wrapper p.copy_right a {
    color: #fff;
}

.port_footer_setions .footer_contact_info p {
    word-break: break-all;

}

/*================== 16 End footer section css ==================  */

/*================== 17 Start start single blog page css ==================  */
.blog_wrapper .blog_data {
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    background: #ffffff;
}

.blog_data .blog_content {
    padding: 30px 30px 20px 30px;
}

.blog_postinfo ul {
    list-style-type: none;
}

.blog_postinfo ul li {
    padding-right: 20px;
    display: inline-block;
    position: relative;
}

.blog_postinfo ul li:after {
    content: "";
    position: absolute;
    right: 10px;
    top: 0;
    bottom: 0;
    background: #ddd;
    width: 1px;
    height: 15px;
}

.blog_postinfo ul li a, .blog_shareinfo .blog_tag a {
    color: #222222;
    text-transform: capitalize;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.blog_postinfo ul li a:hover, .blog_shareinfo .blog_tag a:hover {
    color: #ff517e;
}

.blog_postinfo ul li svg, .blog_shareinfo .blog_tag svg {
    padding-right: 5px;
    color: #ff517e;
}

.blog_postinfo ul li:last-child::after {
    display: none;
}

.blog_content blockquote {
    background: #f7faff;
    padding: 30px 15px 30px 60px;
    font-size: 18px;
    position: relative;
    color: #556d91;
    margin: 15px 0;
}

.blog_content blockquote .blockquote_icon {
    position: absolute;
    left: 15px;
    top: 35px;
    background: rgb(0, 200, 218);
    width: 30px;
    height: 30px;
    text-align: center;
    line-height: 30px;
    color: #fff;
    z-index: 2;
}

.blog_shareinfo .social_list {
    list-style: none;
}

.blog_content .blog_shareinfo {
    display: flex;
    border-top: 1px solid #ddd;
    margin-top: 20px;
    padding-top: 20px;
    align-items: center;
}

.blog_shareinfo .blog_tag {
    flex: 0 0 50%;
    max-width: 50%;
}

.blog_shareinfo .blog_social {
    flex: 0 0 50%;
    max-width: 50%;
    text-align: right;
}

.blog_shareinfo .blog_social .social_list li {
    display: inline-block;
    margin-right: 10px;
}

.blog_shareinfo .siderbar_icon {
    display: block;
    font-size: 20px;
}

.blog_wrapper .blog_comment {
    margin-top: 30px;
}

.latest_comment .comment_thumb {
    width: 100px;
    display: inline-block;
    margin-right: 10px;
}

.latest_comment .comment_data {
    width: calc(100% - 115px);
    display: inline-block;
    vertical-align: top;
}

.blog_comment .latest_comment {
    margin-top: 20px;
    position: relative;
    padding-bottom: 20px;
}

.blog_comment ul li {
    border-bottom: 1px solid #eeeeee;
}

.blog_comment ul li:last-child {
    border: none;
    padding-bottom: 0;
}

.comment_data .client_name h5 {
    font-size: 18px;
    color: #556d91;
    text-transform: capitalize;
}

.comment_data .client_name span {
    letter-spacing: 2px;
    color: #ff517e;
    margin: 5px 0;
    display: block;
    text-transform: capitalize;
}

.comment_data .comment_reply {
    position: absolute;
    top: 0;
    right: 0;
    text-transform: capitalize;
}

.comment_data .comment_reply i {
    font-size: 12px;
}

.comment_reply {
    display: inline-block;
    border-radius: 51px;
    border: 2px solid #7b7b7b36;
    margin: 0;
    height: 35px;
    line-height: 35px;
    min-width: 100px;
    text-align: center;
    color: #777777;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.comment_reply:hover, .comment_reply:focus {
    background: rgb(255, 81, 126);
    border-color: rgb(255, 81, 126);
    color: #ffffff;
}

.blog_wrapper .blog_comment ul {
    list-style: none;
}

.blog_comment .latest_comment.sub_replay {
    margin-left: 40px;
}

.blog_wrapper .widget.blog_reply {
    margin-bottom: 0;
}

.blog_reply .port_contact_form {
    margin-top: 18px;
}

.port_singleblog_wrapper .widget {
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    padding: 30px;
    margin-bottom: 30px;
    background: #ffffff;
}

.blogsidebar_wrapper .widget .form-control {
    background: #ff000000;
    border: none;
    border-bottom: 1px solid #c7cdd3;
    border-radius: 0;
    padding: 0;
    margin-bottom: 0px;
    padding: 0 20px 20px 0;
}

.blogsidebar_wrapper .widget.search_widget form {
    position: relative;
}

.blogsidebar_wrapper .widget.search_widget .blog_searchicon {
    position: absolute;
    right: 0;
    top: 0;
    color: #ff517e;
}

.blogsidebar_wrapper .widget .form-control:focus {
    box-shadow: none;
}

.blogsidebar_wrapper .widget ul {
    list-style-type: none;
}

.widget .widget_rp .rp_thumb {
    width: 80px;
    display: inline-block;
    margin-right: 8px;
}

.widget .widget_rp .rp_data {
    width: calc(100% - 100px);
    display: inline-block;
    vertical-align: top;
}

.widget .widget_rp .rp_heading {
    color: #222222;
    font-size: 16px;
    margin-bottom: 5px;
    display: block;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.widget .widget_rp .rp_heading:hover {
    color: #556d91;
}

.widget .widget_rp .rp_date {
    color: #ff517e;
    text-transform: capitalize;
}
/* ... */

